<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/action_bar_layout"
            layout="@layout/toolbar_top_view"/>
        <EditText
            android:id="@+id/et_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ty_scene_add_name"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_add_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ty_scene_add_bg"/>
        <ImageView
            android:id="@+id/iv_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ty_condition"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_add_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ty_add_condition"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_task"
            android:layout_marginTop="@dimen/mg_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ty_task"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ty_add_task"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
