<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fragment_bg_color">

    <include
        android:id="@+id/action_bar_layout"
        layout="@layout/toolbar_top_view"/>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_below="@id/action_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_scene"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ty_scene"
                    android:gravity="center"
                    android:textColor="#000"
                    android:padding="@dimen/mg_16"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_scene_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_automation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ty_auto"
                    android:textColor="#000"
                    android:padding="@dimen/mg_16"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_auto_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <RelativeLayout
        android:id="@+id/list_background_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_none_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ty_nolist_logo"/>

        <TextView
            android:id="@+id/tv_none_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_none_data"
            android:layout_centerInParent="true"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/ty_no_data"
            android:textColor="@color/text_color2"
            android:textSize="@dimen/ts_16"/>

        <TextView
            android:id="@+id/tv_add_scene"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_below="@id/tv_none_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_add_share_none_bg"
            android:gravity="center"
            android:text="@string/add_scene"
            android:textColor="@color/text_color2"/>
        <TextView
            android:id="@+id/tv_add_auto"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_below="@id/tv_add_scene"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_add_share_none_bg"
            android:gravity="center"
            android:text="@string/add_auto"
            android:textColor="@color/text_color2"/>
    </RelativeLayout>
</RelativeLayout>